--- a/.github/serverless.yml
+++ b/.github/serverless.yml
@@ -3,7 +3,7 @@ service: dynamodb-crud-api
 provider:
   name: aws
   runtime: nodejs18.x
-  stage: dev
+  stage: ${opt:stage, 'dev'}  # ✅ Uses the --stage flag (defaults to 'dev')
   region: us-east-2
   environment:
     DYNAMODB_TABLE_NAME: ${self:custom.postsTableName}
