--- a/serverless.yml
+++ b/serverless.yml
@@ -3,13 +3,13 @@ service: dynamodb-crud-api
 provider:
   name: aws
   runtime: nodejs18.x
-  stage: dev
+  stage: ${opt:stage, 'dev'}  # ✅ Uses `--stage` flag (defaults to 'dev')
   region: us-east-2
   environment:
     DYNAMODB_TABLE_NAME: ${self:custom.postsTableName}
 
 custom:
-  postsTableName: posts-table-${self:provider.stage}
+  postsTableName: posts-table-${self:provider.stage}  # ✅ Ensures unique tables per stage
 
 plugins:
   - serverless-iam-roles-per-function
@@ -17,9 +17,9 @@ plugins:
 functions:
   getPost:
     handler: api.getPost
-    name: get-post
-    memorySize: 128 # mb
-    timeout: 5 # seconds
+    name: get-post-${self:provider.stage}  # ✅ Different function names per stage
+    memorySize: 128
+    timeout: 5
     events:
       - http:
           path: post/{postId}
@@ -29,11 +29,12 @@ functions:
         Action:
           - "dynamodb:GetItem"
         Resource: !GetAtt PostsTable.Arn
+
   createPost:
     handler: api.createPost
-    name: create-post
-    memorySize: 128 # mb
-    timeout: 5 # seconds
+    name: create-post-${self:provider.stage}
+    memorySize: 128
+    timeout: 5
     events:
       - http:
           path: post
@@ -43,11 +44,12 @@ functions:
         Action:
           - "dynamodb:PutItem"
         Resource: !GetAtt PostsTable.Arn
+
   updatePost:
     handler: api.updatePost
-    name: update-post
-    memorySize: 128 # mb
-    timeout: 5 # seconds
+    name: update-post-${self:provider.stage}
+    memorySize: 128
+    timeout: 5
     events:
       - http:
           path: post/{postId}
@@ -57,11 +59,12 @@ functions:
         Action:
           - "dynamodb:UpdateItem"
         Resource: !GetAtt PostsTable.Arn
+
   deletePost:
     handler: api.deletePost
-    name: delete-post
-    memorySize: 128 # mb
-    timeout: 5 # seconds
+    name: delete-post-${self:provider.stage}
+    memorySize: 128
+    timeout: 5
     events:
       - http:
           path: post/{postId}
@@ -71,11 +74,12 @@ functions:
         Action:
           - "dynamodb:DeleteItem"
         Resource: !GetAtt PostsTable.Arn
+
   getAllPosts:
     handler: api.getAllPosts
-    name: get-all-posts
-    memorySize: 128 # mb
-    timeout: 5 # seconds
+    name: get-all-posts-${self:provider.stage}
+    memorySize: 128
+    timeout: 5
     events:
       - http:
           path: posts
@@ -101,3 +105,4 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
+
