--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,31 +3,62 @@ name: Deploy DynamoDB CRUD API
 on:
   push:
     branches:
-      - main        # ✅ Deploys to Dev
-      - production  # ✅ Deploys to Prod
+      - main  # ✅ Only triggers when changes are pushed to the main branch
 
 jobs:
-  deploy:
-    name: Deploy to ${{ github.ref == 'refs/heads/main' && 'dev' || 'prod' }}
+  deploy-dev:
+    name: Deploy to Dev
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Use Node.js 18.x
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 18
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: yarn install  # or npm install
 
-      - name: Deploy to ${{ github.ref == 'refs/heads/main' && 'dev' || 'prod' }}
-        uses: serverless/github-action@master
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          args: deploy --stage ${{ github.ref == 'refs/heads/main' && 'dev' || 'prod' }}
-        env:
-          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2  # Ensure region is correct
+
+      - name: Deploy to Dev
+        run: |
+          npm install -g serverless
+          serverless deploy --stage dev
+
+  deploy-prod:
+    name: Deploy to Prod
+    runs-on: ubuntu-latest
+    needs: deploy-dev  # ✅ This ensures `prod` deploys **only if** `dev` succeeds
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install Dependencies
+        run: yarn install  # or npm install
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+      - name: Deploy to Prod
+        run: |
+          npm install -g serverless
+          serverless deploy --stage prod
