--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy DynamoDB CRUD API
 on:
   push:
     branches:
-      - main  # ✅ Only triggers when changes are pushed to the main branch
+      - main  # ✅ Triggers Dev Deployment
 
 jobs:
   deploy-dev:
@@ -14,51 +14,45 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 18.x
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: yarn install  # or npm install
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2  # Ensure region is correct
-
       - name: Deploy to Dev
-        run: |
-          npm install -g serverless
-          serverless deploy --stage dev
+        uses: serverless/github-action@master
+        with:
+          args: deploy --stage dev
+        env:
+          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
   deploy-prod:
     name: Deploy to Prod
     runs-on: ubuntu-latest
-    needs: deploy-dev  # ✅ This ensures `prod` deploys **only if** `dev` succeeds
+    needs: deploy-dev  # ✅ Ensures `prod` deploys only if `dev` succeeds
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 18.x
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: yarn install  # or npm install
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
-
       - name: Deploy to Prod
-        run: |
-          npm install -g serverless
-          serverless deploy --stage prod
+        uses: serverless/github-action@master
+        with:
+          args: deploy --stage prod
+        env:
+          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
