Optimized deployment: Excluded node_modules from packaging to reduce Lambda deployment size

--- a/serverless.yml
+++ b/serverless.yml
@@ -105,4 +105,8 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
+          
+package:
+  exclude:
+    - node_modules/**
 
