Updated Handler Path

--- a/functions/createPost.yml
+++ b/functions/createPost.yml
@@ -1,4 +1,4 @@
-handler: handlers/createPost.createPost
+handler: api.createPost
 name: create-post-${self:provider.stage}
 memorySize: 128
 timeout: 5
@@ -6,6 +6,7 @@ events:
   - http:
       path: post
       method: POST
+      cors: true  # ✅ Enables CORS for API Gateway
 iamRoleStatements:
   - Effect: "Allow"
     Action:
